[package]
name = "subnet2db2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
diesel = {version = "2.2.8", features  = ["postgres","r2d2", "postgres_backend"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = {version = "0.11.7", features = ["color", "humantime"]}
#[dependencies.diesel-async] 
#version = "0.3.1" 
#features = ["postgres"] 

ipnetwork = {version = "0.21.1", features=["serde"]}
log = "0.4.26"
pnet = {version = "0.35.0", features=["serde"]}
serde = {version = "1.0.219", features=["derive"]}
serde_json = "1.0.140"
